tests/paczka1/fuzzy1/91801850.err
Error in line 2: ZwbX1QF A661 97,3
Error in line 3: ZwbX1QF A996 86,3
Error in line 14: Mb9 A996 40,7
Error in line 16: ATWkCa0rR A914 42,4
Error in line 15: Mb9 A661 84,3
Error in line 24: 20xxfwBSe7 A914 86,3
Error in line 25: 20xxfwBSe7 A115 43,2
Error in line 10: WaLitHSH1u A661 16,3
